# Spark-PMoF

./: .gitignore  .gitlab-ci.yml  .gitmodules  .scalafmt.conf  .travis.yml  ChangeLog  README.md  pom.xml  scalastyle-output.xml  spark.conf.example
core/: pom.xml
core/src/main/scala/org/apache/spark/scheduler/: MapStatus.scala
doc/: RPMem_shuffle_enabling_guide.md
docker/ubuntu18/: DockerFile
native/: pom.xml
native/src/: 010-TestCasePersistentMemoryPool.cpp  Makefile  PersistentMemoryPool.cpp  PersistentMemoryPool.h  PmemBuffer.h  Request.cpp  Request.h  jni_write_bench  lib_jni_pmdk.cpp  lib_jni_pmdk.h  pmemkv.h
native/src/org/apache/spark/storage/pmof/: PersistentMemoryPool.java
native/src/rpmp/: CMakeLists.txt  README.md  main.cc
native/src/rpmp/benchmark/: local_allocate.cc  remote_read.cc
native/src/rpmp/pmpool/: AllocatorProxy.h  CMakeLists.txt  Config.h  DataServer.cc  DataServer.h  Digest.cc  Digest.h  NetworkServer.cc  NetworkServer.h  PmemAllocator.h  Protocol.cc  Protocol.h  Request.cc  Request.h  base.h
native/src/rpmp/pmpool/buffer/: CircularBuffer.h
native/src/rpmp/pmpool/client/: NetworkClient.cc  NetworkClient.h  PmPoolClient.cc  PmPoolClient.h
native/src/rpmp/test/unit_test/: DigestTest.cc
oap-shuffle/RPMem-shuffle/: README.md
oap-shuffle/RPMem-shuffle/native/src/: Makefile  lib_jni_pmdk.cpp
oap-shuffle/Spark-PMoF/: README.md
oap-shuffle/Spark-PMoF/core/: pom.xml  scalastyle-output.xml
oap-shuffle/Spark-PMoF/rpmp/: README.md
oap-shuffle/Spark-PMoF/rpmp/pmpool/: Protocol.cc
oap-shuffle/Spark-PMoF/rpmp/pmpool/client/: PmPoolClient.cc
oap-shuffle/Spark-PMoF/rpmp/pmpool/client/native/: com_intel_rpmp_PmPoolClient.cc
rpmp/: CMakeLists.txt  Client.cc  Client.h  ProxyMain.cc  ProxyServer.cc  ProxyServer.h  README.md  main.cc  start-rpmp.sh
rpmp/benchmark/: CMakeLists.txt  Config.h  get.cc  local_allocate.cc  put.cc  put_and_get.cc  put_and_read.cc  remote_allocate.cc  remote_allocate_write.cc  remote_put.cc  remote_read.cc  remote_write.cc
rpmp/config/: rpmp.conf
rpmp/pmpool/: AllocatorProxy.h  Base.h  CMakeLists.txt  Callback.h  Config.h  DataServer.cc  DataServer.h  Event.cc  Event.h  HeartbeatClient.cc  HeartbeatClient.h  HeartbeatEvent.cc  HeartbeatEvent.h  Log.h  NetworkServer.cc  NetworkServer.h  PmemAllocator.h  Protocol.cc  Protocol.h  Proxy.cc  Proxy.h  ProxyEvent.cc  ProxyEvent.h  RLog.h  ThreadWrapper.h
rpmp/pmpool/DataService/: DataServerService.cc  DataServerService.h  DataServiceEvent.cc  DataServiceEvent.h  DataServiceRequestHandler.h
rpmp/pmpool/buffer/: CircularBuffer.h
rpmp/pmpool/client/: NetworkClient.cc  NetworkClient.h  PmPoolClient.cc  PmPoolClient.h  ProxyClient.cc  ProxyClient.h  xxx.cpp  xxx.h
rpmp/pmpool/client/java/rpmp/: pom.xml
rpmp/pmpool/client/java/rpmp/src/main/java/com/intel/rpmp/: JniUtils.java  PmPoolClient.java
rpmp/pmpool/client/java/rpmp/src/test/java/com/intel/rpmp/: PmPoolClientTest.java
rpmp/pmpool/client/native/: com_intel_rpmp_PmPoolClient.cc  concurrent_map.h
rpmp/pmpool/proxy/: ConsistentHash.h  IHash.h  Node.h  NodeManager.cc  NodeManager.h  PhysicalNode.h  VirtualNode.h  XXHash.h
rpmp/pmpool/proxy/clientService/: ClientService.cc  ClientService.h
rpmp/pmpool/proxy/metastore/: Connection.cc  Connection.h  ConnectionFacade.cc  ConnectionFacade.h  JsonUtil.h  MetastoreFacade.cc  MetastoreFacade.h  Redis.cc  Redis.h
rpmp/pmpool/proxy/metastore/redis/: RRedis.cc  RRedis.h  Redis.cc  Redis.h
rpmp/pmpool/proxy/metastore/rocksdb/: Rocks.cc  Rocks.h  RocksConnection.cc  RocksConnection.h
rpmp/pmpool/proxy/replicaService/: ReplicaEvent.h  ReplicaService.cc  ReplicaService.h
rpmp/pmpool/proxy/tracker/: Tracker.cc  Tracker.h
rpmp/pmpool/queue/: blockingconcurrentqueue.h
rpmp/test/: CMakeLists.txt  chash_test.cc  rocksdb_test.cc
src/main/cpp/: Makefile  PersistentMemoryPool.cpp  PersistentMemoryPool.h  PmemBuffer.h  Request.cpp  Request.h  WorkQueue.h  jni_write_bench  lib_jni_pmdk.cpp  lib_jni_pmdk.h  libpmemobj_write_bench.cpp  libpmemobj_write_bench.h  make  test.cpp
src/main/cpp/org/apache/spark/storage/pmof/: PersistentMemoryPool.java
src/main/java/org/apache/spark/network/pmof/: BlockStatus.java  BlockStatusMessage.java  BlockStatusSerializer.java  BlockTrackerCallback.java  FetchBlockMessage.java  MessageType.java  ReadCallback.java  ReceivedCallback.java  ShuffleBuffer.java  ShuffleBufferInputStream.java
src/main/java/org/apache/spark/shuffle/sort/: SerializedShuffleWriter.java
src/main/java/org/apache/spark/storage/pmof/: PersistentMemoryMetaHandler.java  PersistentMemoryPool.java  PmemBuffer.java
src/main/scala/org/apache/spark/network/: RDMAClient.scala  RDMAClientFactory.scala  RDMAServer.scala  RDMATransferService.scala  TransferService.scala
src/main/scala/org/apache/spark/network/pmof/: Callback.scala  ClientFactory.scala  PmofTransferService.scala  RDMAClient.scala  RDMAClientFactory.scala  RDMAServer.scala  RDMATransferService.scala  RdmaBlockTracker.scala  RdmaClient.scala  RdmaClientFactory.scala  RdmaClientPool.scala  RdmaServer.scala  RdmaTransferService.scala  RmaTransferService.scala  Server.scala
src/main/scala/org/apache/spark/shuffle/: RDMAShuffleManager.scala  RDMAShuffleReader.scala
src/main/scala/org/apache/spark/storage/: RDMAShuffleBlockFetcherIterator.scala
src/test/org/apache/spark/network/: ClientTest.scala  ServerTest.scala
src/test/org/apache/spark/network/pmof/: ClientTest.scala  ServerTest.scala
(+74 files in other folders)
